# anochi

./: .gitignore  .rules  ARCHITECTURE.md  Cargo.toml  DEBUG_TESTS_SUMMARY.md  REPL_ENHANCEMENT_SUMMARY.md  TYPE_SYSTEM_FINAL.md  avante.md  check_output.txt  debug_tokens.rs  requirements.md  tasks.md  temp.md  tod_type_checking.md  todo.md
docs/: SYNTAX.md  TYPE_SYSTEM.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: ast.rs  code_runner.rs  code_runner_tests.rs  lib.rs  main.rs  prelude.rs  token.rs  tree_walk_vm.rs  typing.rs
src/ast/: expression.rs  literal.rs  mod.rs  operators.rs  statement.rs
src/code_error/: mod.rs
src/code_runner/: code_runner_tests.rs  mod.rs
src/parser/: block_tests.rs  mod.rs  parser_error.rs  parser_tests.rs
src/token/: mod.rs  slice.rs  tests.rs  token_type.rs  tokenizer.rs
src/types/: mod.rs  tests.rs  type_def.rs
src/typing/: architecture_test.rs  architecture_test_new.rs  container_test.rs  flexible_test.rs  tests.rs  tests_new.rs
src/vm/: backend.rs  mod.rs  tree_walk.rs
src/vm/tree_walk/: evaluation.rs  execution.rs  mod.rs  operations.rs  scope_stack.rs  scope_stack_tests.rs  vm_error.rs  vm_tests.rs  vm_value.rs  vm_value_operation.rs
src/vm/tree_walk/vm_value/: function.rs  mod.rs
tests/: code_runner_tests.rs  input_system_tests  vm_tests.rs
