[package]
name = "anochi"
version = "0.1.0"
edition = "2024"

[dependencies]
display_tree = "1.1.2"
num-bigint = "0.4.6"
num-rational = "0.4.2"
thiserror = "1.0"
rustyline = "14.0"
enum-as-inner = "0.6.1"
strum = { version = "0.27.2", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "into", "from"] }
macros={path="./macros"}
